fix: ocr
